--- a/pages/a-la-francaise.html
+++ b/pages/a-la-francaise.html
@@ -25,9 +25,7 @@
         />
       </header>
 
-      <section class="image-menu">
-        <img src="/images/restaurants/La francaise.jpg" alt="" />
-      </section>
+      <section class="image-menu"></section>
 
       <section class="menu-main">
         <h1>A la francaise<i class="far fa-heart"></i></h1>
@@ -46,7 +44,7 @@
                     </div>
                   </article>
                   <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-check-circle fa-effet"></i>
                   </button>
                 </li>
 
@@ -59,7 +57,7 @@
                     </div>
                   </article>
                   <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-check-circle fa-effet"></i>
                   </button>
                 </li>
 
@@ -72,7 +70,7 @@
                     </div>
                   </article>
                   <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-check-circle fa-effet"></i>
                   </button>
                 </li>
               </ul>
@@ -91,7 +89,7 @@
                     </div>
                   </article>
                   <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-check-circle fa-effet"></i>
                   </button>
                 </li>
 
@@ -104,7 +102,7 @@
                     </div>
                   </article>
                   <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-check-circle fa-effet"></i>
                   </button>
                 </li>
 
@@ -117,7 +115,7 @@
                     </div>
                   </article>
                   <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-check-circle fa-effet"></i>
                   </button>
                 </li>
               </ul>
@@ -136,7 +134,7 @@
                     </div>
                   </article>
                   <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-check-circle fa-effet"></i>
                   </button>
                 </li>
 
@@ -149,7 +147,7 @@
                     </div>
                   </article>
                   <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-check-circle fa-effet"></i>
                   </button>
                 </li>
 
@@ -162,7 +160,7 @@
                     </div>
                   </article>
                   <button class="btn-menu">
-                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-check-circle fa-effet"></i>
                   </button>
                 </li>
               </ul>
