avancement css loading page bientot finit

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
     <link href="FontAnswome/css/all.css" rel="stylesheet" />
     <link rel="stylesheet" href=".public/css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -15,6 +21,11 @@
     <title>ohmyfood</title>
   </head>
   <body>
+    <div class="load-page">
+      <div class="loader">
+        <div class="loader-inner titre-shrikhand">ohmyfood</div>
+      </div>
+    </div>
     <div class="container">
       <!--  HEADER -->
       <header class="header">
@@ -118,7 +129,7 @@
         </section>
 
         <footer class="footer">
-          <img src="images/logo/ohmyfood.png" alt="" />
+          <p class="titre-shrikhand --logo-footer">ohmyfood</p>
           <ul class="liste-footer">
             <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
             <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
