--- a/pages/a-la-francaise.html
+++ b/pages/a-la-francaise.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
     <link href="/FontAnswome/css/all.css" rel="stylesheet" />
     <link rel="stylesheet" href="/.public/css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -28,12 +34,17 @@
       <section class="image-menu"></section>
 
       <section class="menu-main">
-        <h1>A la francaise<i class="far fa-heart"></i></h1>
+        <h1 class="titre-shrikhand">
+          A la francaise<i class="far fa-heart"></i
+          ><i class="fas fa-heart heart"></i>
+        </h1>
 
         <ul class="menu-contenu">
           <li>
             <article class="article-menu">
-              <h3 class="menu-titre-carte">ENTREES</h3>
+              <h3 class="menu-titre-carte">
+                ENTREES <span class="barre-verte"></span>
+              </h3>
               <ul class="liste-menu">
                 <li class="menu">
                   <article>
@@ -78,7 +89,9 @@
           </li>
           <li>
             <article class="article-menu">
-              <h3 class="menu-titre-carte">PLATS</h3>
+              <h3 class="menu-titre-carte">
+                PLATS<span class="barre-verte"></span>
+              </h3>
               <ul class="liste-menu">
                 <li class="menu">
                   <article>
@@ -123,7 +136,9 @@
           </li>
           <li>
             <article class="article-menu">
-              <h3 class="menu-titre-carte">DESSERTS</h3>
+              <h3 class="menu-titre-carte">
+                DESSERTS<span class="barre-verte"></span>
+              </h3>
               <ul class="liste-menu">
                 <li class="menu">
                   <article>
@@ -171,7 +186,8 @@
       </section>
 
       <footer class="footer">
-        <img src="/images/logo/ohmyfood.png" alt="" />
+        <!-- <img src="/images/logo/ohmyfood.png" alt="" /> -->
+        <p class="titre-shrikhand --logo-footer">ohmyfood</p>
         <ul class="liste-footer">
           <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
           <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
