mise a jour des nimations

--- a/pages/a-la-francaise.html
+++ b/pages/a-la-francaise.html
@@ -59,7 +59,7 @@
                   </button>
                 </li>
 
-                <li class="menu">
+                <li class="menu --delay">
                   <article>
                     <h3 class="menu-titre">Velouté de légumes d'antan</h3>
                     <div class="menu-content">
@@ -67,12 +67,12 @@
                       <span>35€</span>
                     </div>
                   </article>
-                  <button class="btn-menu">
+                  <button class="btn-menu --delay">
                     <i class="fas fa-check-circle fa-effet"></i>
                   </button>
                 </li>
 
-                <li class="menu">
+                <li class="menu --delay">
                   <article>
                     <h3 class="menu-titre">Soupe à l'ognon</h3>
                     <div class="menu-content">
