mise a jour css et animation

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="container">
       <!--  HEADER -->
       <header class="header">
-        <img class="logo logo--acceuil" src="images/logo/ohmyfood.png" alt="" />
+        <p class="logo logo--acceuil titre-shrikhand">ohmyfood</p>
       </header>
 
       <div class="main">
@@ -131,10 +131,18 @@
         <footer class="footer">
           <p class="titre-shrikhand --logo-footer">ohmyfood</p>
           <ul class="liste-footer">
-            <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
-            <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
-            <li>Mention légales</li>
-            <li>contact</li>
+            <li>
+              <a href="#"
+                ><i class="fas fa-utensils"></i>Proposer un restaurant</a
+              >
+            </li>
+            <li>
+              <a href="#"
+                ><i class="fas fa-hands-helping"></i>Devenir partenaire</a
+              >
+            </li>
+            <li><a href="#">Mention légales</a></li>
+            <li><a href="#">contact</a></li>
           </ul>
         </footer>
       </div>
