--- a/pages/a-la-francaise.html
+++ b/pages/a-la-francaise.html
@@ -24,11 +24,7 @@
     <div class="container">
       <header class="header">
         <a href="/index.html"><i class="fas fa-arrow-left"></i></a>
-        <img
-          class="logo logo--restaurant"
-          src="/images/logo/ohmyfood.png"
-          alt=""
-        />
+        <p class="logo logo--restaurant titre-shrikhand">ohmyfood</p>
       </header>
 
       <section class="image-menu"></section>
@@ -186,13 +182,20 @@
       </section>
 
       <footer class="footer">
-        <!-- <img src="/images/logo/ohmyfood.png" alt="" /> -->
         <p class="titre-shrikhand --logo-footer">ohmyfood</p>
         <ul class="liste-footer">
-          <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
-          <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
-          <li>Mention légales</li>
-          <li>contact</li>
+          <li>
+            <a href="#"
+              ><i class="fas fa-utensils"></i>Proposer un restaurant</a
+            >
+          </li>
+          <li>
+            <a href="#"
+              ><i class="fas fa-hands-helping"></i>Devenir partenaire</a
+            >
+          </li>
+          <li><a href="#">Mention légales</a></li>
+          <li><a href="#">contact</a></li>
         </ul>
       </footer>
     </div>
