Mise a jour animation ol puce terminé

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
               <p><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</p>
             </li>
 
-            <li>
+            <li class="step">
               <p><i class="fas fa-list-ul"></i>Composez votre menu</p>
             </li>
 
-            <li>
+            <li class="step">
               <p><i class="fas fa-store"></i>Dégustez au restaurant</p>
             </li>
           </ol>
