mise a jour animation et css des pages restaurant

--- a/pages/la-note-enchantee.html
+++ b/pages/la-note-enchantee.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
     <link href="/FontAnswome/css/all.css" rel="stylesheet" />
     <link rel="stylesheet" href="/.public/css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -15,185 +18,196 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap"
       rel="stylesheet"
     />
-    <title>La note enchantée</title>
+    <title>La note anchantée</title>
   </head>
   <body>
     <div class="container">
       <header class="header">
         <a href="/index.html"><i class="fas fa-arrow-left"></i></a>
-        <img
-          class="logo logo--restaurant"
-          src="/images/logo/ohmyfood.png"
-          alt=""
-        />
+        <p class="logo logo--restaurant titre-shrikhand">ohmyfood</p>
       </header>
 
-      <section class="image-menu">
-      </section>
+      <section class="image-menu"></section>
 
       <section class="menu-main">
-        <h1>La note enchantée<i class="far fa-heart"></i><i class="fas fa-heart heart"></i></h1>
+        <h1 class="titre-shrikhand">
+          A la francaise<i class="far fa-heart"></i
+          ><i class="fas fa-heart heart"></i>
+        </h1>
 
         <ul class="menu-contenu">
           <li>
-        <article class="article-menu">
-          <h3 class="menu-titre-carte">ENTREES</h3>
-          <ul class="liste-menu">
-            <li class="menu">
-              <article>
-                <h3 class="menu-titre">Rviole de foie gras</h3>
-                <div class="menu-content">
-                  <p>Accompagnées de leur crème à la truffe</p>
-                  <span>25€</span>
-                </div>
-              </article>
-              <button class="btn-menu">
-                <i class="fas fa-check-circle"></i>
-              </button>
-            </li>
+            <article class="article-menu">
+              <h3 class="menu-titre-carte">
+                ENTREES <span class="barre-verte"></span>
+              </h3>
+              <ul class="liste-menu">
+                <li class="menu">
+                  <article>
+                    <h3 class="menu-titre">Raviole de foie gras</h3>
+                    <div class="menu-content">
+                      <p>Accompagnés d leur crème à la truffe</p>
+                      <span>25€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle fa-effet"></i>
+                  </button>
+                </li>
 
-            <li class="menu">
-              <article>
-                <h3 class="menu-titre">Caviar osciètre</h3>
-                <div class="menu-content">
-                  <p>Sur blini à la farine de blé noir</p>
-                  <span>35€</span>
-                </div>
-              </article>
-              <button class="btn-menu">
-                <i class="fas fa-check-circle"></i>
-              </button>
-            </li>
+                <li class="menu --delay">
+                  <article>
+                    <h3 class="menu-titre">Caviar osciètre</h3>
+                    <div class="menu-content">
+                      <p>Sur blini à la farine de blé noir</p>
+                      <span>35€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu --delay">
+                    <i class="fas fa-check-circle fa-effet"></i>
+                  </button>
+                </li>
 
-            <li class="menu">
-              <article>
-                <h3 class="menu-titre">Homard et espuma de ...</h3>
-                <div class="menu-content">
-                  <p>Mariné aux zests d'orange</p>
-                  <span>20€</span>
-                </div>
-              </article>
-              <button class="btn-menu">
-                <i class="fas fa-check-circle"></i>
-              </button>
-              
-            <li class="menu">
-              <article>
-                <h3 class="menu-titre">Foie gras de canard cuit entier</h3>
-                <div class="menu-content">
-                  <p>Confiture de figue et pain toasté</p>
-                  <span>35€</span>
-                </div>
-              </article>
-              <button class="btn-menu">
-                <i class="fas fa-check-circle"></i>
-              </button>
-            </li>
-            </li>
-          </ul>
-        </article>
+                <li class="menu --delay">
+                  <article>
+                    <h3 class="menu-titre">Homard et espuma de potiron</h3>
+                    <div class="menu-content">
+                      <p>Mariné aux zeste de d'orange</p>
+                      <span>20€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle fa-effet"></i>
+                  </button>
+                </li>
+                <li class="menu --delay">
+                  <article>
+                    <h3 class="menu-titre">Foie gras de cannard cuit entier</h3>
+                    <div class="menu-content">
+                      <p>Confiture de figue et pain toasté</p>
+                      <span>35€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle fa-effet"></i>
+                  </button>
+                </li>
+              </ul>
+            </article>
           </li>
           <li>
-        <article class="article-menu">
-          <h3 class="menu-titre-carte">PLATS</h3>
-          <ul class="liste-menu">
-            <li class="menu">
-              <article>
-                <h3 class="menu-titre">Noix de coquilles Saint-Jacques</h3>
-                <div class="menu-content">
-                  <p>Sur lit de purée de celer-rave</p>
-                  <span>40€</span>
-                </div>
-              </article>
-              <button class="btn-menu">
-                <i class="fas fa-check-circle"></i>
-              </button>
-            </li>
+            <article class="article-menu">
+              <h3 class="menu-titre-carte">
+                PLATS<span class="barre-verte"></span>
+              </h3>
+              <ul class="liste-menu">
+                <li class="menu">
+                  <article>
+                    <h3 class="menu-titre">Noix de Coquille Saint-Jacques</h3>
+                    <div class="menu-content">
+                      <p>Sur son lit de céleri-rave</p>
+                      <span>40€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle fa-effet"></i>
+                  </button>
+                </li>
 
-            <li class="menu">
-              <article>
-                <h3 class="menu-titre">Langoustine poêlée</h3>
-                <div class="menu-content">
-                  <p>purée de patate douce</p>
-                  <span>35€</span>
-                </div>
-              </article>
-              <button class="btn-menu">
-                <i class="fas fa-check-circle"></i>
-              </button>
-            </li>
+                <li class="menu">
+                  <article>
+                    <h3 class="menu-titre">Magret de canard</h3>
+                    <div class="menu-content">
+                      <p>Et parmentier de pommes de terres</p>
+                      <span>35€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle fa-effet"></i>
+                  </button>
+                </li>
 
-            <li class="menu">
-              <article>
-                <h3 class="menu-titre">Mijoté de queu de boeuf</h3>
-                <div class="menu-content">
-                  <p>Et riz sauvage aux zests de citron</p>
-                  <span>44€</span>
-                </div>
-              </article>
-              <button class="btn-menu">
-                <i class="fas fa-check-circle"></i>
-              </button>
-            </li>
-          </ul>
-        </article>
-      </li>
-      <li>
-        <article class="article-menu">
-          <h3 class="menu-titre-carte">DESSERTS</h3>
-          <ul class="liste-menu">
-            <li class="menu">
-              <article>
-                <h3 class="menu-titre">Macaron noisette et chocolat</h3>
-                <div class="menu-content">
-                  <p>Glace au caramel brun et sel de Guérande</p>
-                  <span>18€</span>
-                </div>
-              </article>
-              <button class="btn-menu">
-                <i class="fas fa-check-circle"></i>
-              </button>
-            </li>
+                <li class="menu">
+                  <article>
+                    <h3 class="menu-titre">Pigeonneau d'Ille-et-Vilaine</h3>
+                    <div class="menu-content">
+                      <p>Sur son lit de gnocchis aux légumes</p>
+                      <span>44€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle fa-effet"></i>
+                  </button>
+                </li>
+              </ul>
+            </article>
+          </li>
+          <li>
+            <article class="article-menu">
+              <h3 class="menu-titre-carte">
+                DESSERTS<span class="barre-verte"></span>
+              </h3>
+              <ul class="liste-menu">
+                <li class="menu">
+                  <article>
+                    <h3 class="menu-titre">Pétales de violettes glacés</h3>
+                    <div class="menu-content">
+                      <p>Et purée de noisette</p>
+                      <span>18€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle fa-effet"></i>
+                  </button>
+                </li>
 
-            <li class="menu">
-              <article>
-                <h3 class="menu-titre">Baba au rhum revisitée</h3>
-                <div class="menu-content">
-                  <p>Avec son coulit de citron</p>
-                  <span>22€</span>
-                </div>
-              </article>
-              <button class="btn-menu">
-                <i class="fas fa-check-circle"></i>
-              </button>
-            </li>
+                <li class="menu">
+                  <article>
+                    <h3 class="menu-titre">Fondant au chocolat</h3>
+                    <div class="menu-content">
+                      <p>Revisité</p>
+                      <span>22€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle fa-effet"></i>
+                  </button>
+                </li>
 
-            <li class="menu">
-              <article>
-                <h3 class="menu-titre">Tarte au citron meringuée</h3>
-                <div class="menu-content">
-                  <p>destructurée</p>
-                  <span>23€</span>
-                </div>
-              </article>
-              <button class="btn-menu">
-                <i class="fas fa-check-circle"></i>
-              </button>
-            </li>
-          </ul>
-        </article>
-      </li>
+                <li class="menu">
+                  <article>
+                    <h3 class="menu-titre">Millefeuille croustillant</h3>
+                    <div class="menu-content">
+                      <p>Myrtilles et pâte d'amande</p>
+                      <span>23€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle fa-effet"></i>
+                  </button>
+                </li>
+              </ul>
+            </article>
+          </li>
         </ul>
         <button class="btn btn--commander">Commander</button>
       </section>
 
       <footer class="footer">
-        <img src="/images/logo/ohmyfood.png" alt="" />
+        <p class="titre-shrikhand --logo-footer">ohmyfood</p>
         <ul class="liste-footer">
-          <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
-          <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
-          <li>Mention légales</li>
-          <li>contact</li>
+          <li>
+            <a href="#"
+              ><i class="fas fa-utensils"></i>Proposer un restaurant</a
+            >
+          </li>
+          <li>
+            <a href="#"
+              ><i class="fas fa-hands-helping"></i>Devenir partenaire</a
+            >
+          </li>
+          <li><a href="#">Mention légales</a></li>
+          <li><a href="#">contact</a></li>
         </ul>
       </footer>
     </div>
